--- a/src/pages/roomDetails/roomDetails.css
+++ b/src/pages/roomDetails/roomDetails.css
@@ -78,3 +78,45 @@
     }
     
 }
+
+
+
+
+
+
+
+
+/* Add this CSS to roomDetails.css or a similar CSS file */
+
+@keyframes shimmer {
+    0% {
+      background-position: -468px 0;
+    }
+    100% {
+      background-position: 468px 0;
+    }
+  }
+  
+  .shimmer-wrapper {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    background-color: #f6f7f8;
+    background-image: linear-gradient(to right, #f6f7f8 0%, #edeef1 20%, #f6f7f8 40%, #f6f7f8 100%);
+    background-repeat: no-repeat;
+    background-size: 800px 104px;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-name: shimmer;
+    animation-timing-function: linear;
+  }
+  
+  .shimmer {
+    display: block;
+    height: 100%;
+    width: 100%;
+  }
+  
