--- a/src/pages/roomDetails/features.css
+++ b/src/pages/roomDetails/features.css
@@ -1,4 +1,4 @@
-.singlePageContainer{
+.singlePageContainerccccccccccccccc{
     display: flex;
     justify-content:flex-start;
     align-items: center;
@@ -22,7 +22,7 @@
 }
 
 .phoneCallCard {
-  width: 30%;
+  width: 80%;
   height: 26vh;
   border-radius: 20px;
   /* box-shadow: 0 1px 2px rgba(0,0,0,0.08), 0 4px 12px rgba(0,0,0,0.05); */
@@ -65,7 +65,7 @@
     }
 
     .phoneCallCard{
-        width: 78%;
+        width: 100%;
         margin: 0;
 
     }
