--- a/src/pages/roomDetails/location.css
+++ b/src/pages/roomDetails/location.css
@@ -5,5 +5,6 @@
 .roomdetails h5{
     margin-bottom: 30px;
     margin-top: 34px;
-    font-size: 20px;
+    font-size: 18px;
+    font-style: italic;
 }
