--- a/src/pages/roomDetails/features.css
+++ b/src/pages/roomDetails/features.css
@@ -1,10 +1,10 @@
-.singlePageContainerccccccccccccccc{
+/* .singlePageContainer{
     display: flex;
     justify-content:flex-start;
     align-items: center;
     gap: 2rem;
-    /* box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2); */
-}
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+} */
 
 .features-table {
   width: 100%;
@@ -15,6 +15,7 @@
   border: 1px solid #dddddd;
   padding: 8px;
   text-align: left;
+  text-transform: capitalize;
 }
 
 .feature-label {
