--- a/src/components/auth/signup/signup.css
+++ b/src/components/auth/signup/signup.css
@@ -7,7 +7,7 @@
 .eyesIcon {
     position: absolute;
     left: 371px;
-    bottom: 100px;
+    bottom: 122px;
     padding-top: 2px;
     padding-bottom: 2px;
 }
@@ -42,6 +42,14 @@
     border-radius: 10px;
     color: white;
     cursor: pointer;
+}
+
+
+.account__text{
+    text-align: center;
+    margin-top: 12px;
+    cursor: pointer;
+
 }
 
 
